# bb-storage

./: .bazelrc  MODULE.bazel  WORKSPACE  go.mod  go.sum  go_dependencies.bzl
cmd/bb_copy/: BUILD.bazel
cmd/bb_replicator/: BUILD.bazel  main.go
cmd/bb_storage/: BUILD.bazel  main.go
doc/zh_CN/: README.md
internal/mock/: BUILD.bazel
patches/bazel_gazelle/: issue-1595.diff
patches/com_github_golang_mock/: mocks-for-funcs.diff
patches/com_github_grpc_ecosystem_go_grpc_prometheus/: client-metrics-prevent-handled-twice.diff
patches/io_bazel_rules_go/: service-registrar.diff
pkg/auth/: BUILD.bazel
pkg/authenticator/: BUILD.bazel  deny_authenticator.go  deny_authenticator_test.go  tls_client_certificate_authenticator.go  tls_client_certificate_authenticator_test.go
pkg/bb_tls/: BUILD.bazel  spiffe_tls.go  spiffe_tls_test.go  tls.go  tls_test.go
pkg/blobstore/: BUILD.bazel  demultiplexing_blob_access_test.go  reference_expanding_blob_access_test.go  spanner_blob_access.go  spanner_gcs_blob_access.go
pkg/blobstore/buffer/: cas_validating_chunk_reader.go  new_cas_buffer_from_reader_test.go
pkg/blobstore/completenesschecking/: completeness_checking_blob_access_test.go
pkg/blobstore/configuration/: BUILD.bazel  ac_blob_access_creator.go  blob_access_creator.go  cas_blob_access_creator.go  icas_blob_access_creator.go  new_blob_access.go
pkg/blobstore/grpcclients/: BUILD.bazel  ac_blob_access.go  cas_blob_access.go
pkg/blobstore/grpcservers/: BUILD.bazel  action_cache_server.go  byte_stream_server.go  content_addressable_storage_server_test.go
pkg/blobstore/local/: BUILD.bazel  block_list_growing_policy.go  flat_blob_access.go  flat_blob_access_test.go  old_current_new_location_blob_map.go  old_current_new_location_blob_map_test.go  periodic_syncer_test.go
pkg/blobstore/mirrored/: BUILD.bazel  mirrored_blob_access_test.go  tri_mirrored_ac_blob_access.go  tri_mirrored_blob_access_test.go  tri_mirrored_cas_blob_access.go  tri_mirrored_common.go
pkg/blobstore/replication/: BUILD.bazel  deduplicating_blob_replicator_test.go  local_blob_replicator_test.go  queued_blob_replicator_test.go
pkg/blobstore/sharding/: sharding_blob_access.go
pkg/blockdevice/: BUILD.bazel
pkg/builder/: BUILD.bazel  authorizing_build_queue_test.go  demultiplexing_build_queue.go  demultiplexing_build_queue_test.go  forwarding_build_queue_test.go
pkg/cloud/aws/: BUILD.bazel
pkg/cloud/gcp/: BUILD.bazel
pkg/digest/: BUILD.bazel  digest_test.go
pkg/eviction/: BUILD.bazel
pkg/filesystem/path/: BUILD.bazel
pkg/global/: BUILD.bazel  apply_configuration.go
pkg/grpc/: BUILD.bazel  allow_authenticator.go  allow_authenticator_test.go  any_authenticator.go  any_authenticator_test.go  authenticating_interceptor.go  authenticator.go  base_client_factory.go  server.go
pkg/grpcauth/: BUILD.bazel  all_authenticator_test.go  any_authenticator_test.go  authenticator.go  tls_client_certificate_authenticator.go  tls_client_certificate_authenticator_test.go
pkg/http/: BUILD.bazel  configuration.go  server.go
pkg/jwt/: BUILD.bazel
pkg/proto/auth/: BUILD.bazel
pkg/proto/blobstore/local/: BUILD.bazel
pkg/proto/configuration/auth/: BUILD.bazel  auth.pb.go  auth.proto
pkg/proto/configuration/bb_copy/: BUILD.bazel
pkg/proto/configuration/bb_replicator/: BUILD.bazel  bb_replicator.pb.go
pkg/proto/configuration/bb_storage/: BUILD.bazel  bb_storage.pb.go  bb_storage.proto
pkg/proto/configuration/blobstore/: BUILD.bazel  blobstore.pb.go  blobstore.proto
pkg/proto/configuration/blockdevice/: BUILD.bazel
pkg/proto/configuration/builder/: BUILD.bazel  builder.pb.go  builder.proto
pkg/proto/configuration/cloud/aws/: BUILD.bazel
pkg/proto/configuration/cloud/gcp/: BUILD.bazel
pkg/proto/configuration/digest/: BUILD.bazel
pkg/proto/configuration/eviction/: BUILD.bazel
pkg/proto/configuration/global/: BUILD.bazel
pkg/proto/configuration/grpc/: BUILD.bazel  grpc.pb.go  grpc.proto
pkg/proto/configuration/http/: BUILD.bazel
pkg/proto/configuration/jwt/: BUILD.bazel
pkg/proto/configuration/spiffe/: BUILD.bazel  spiffe.pb.go  spiffe.proto
pkg/proto/configuration/tls/: BUILD.bazel  tls.pb.go  tls.proto
pkg/proto/fsac/: BUILD.bazel
pkg/proto/http/oidc/: BUILD.bazel
pkg/proto/icas/: BUILD.bazel
pkg/proto/iscc/: BUILD.bazel
pkg/proto/replicator/: BUILD.bazel
pkg/spiffebundle/: BUILD.bazel  source_test.go
pkg/testutil/: BUILD.bazel  testutil.go
pkg/util/: BUILD.bazel  jsonnet_test.go
