load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "authenticator",
    srcs = [
        "allow_authenticator.go",
        "any_authenticator.go",
        "authenticator.go",
        "deny_authenticator.go",
        "tls_client_certificate_authenticator.go",
    ],
    importpath = "github.com/buildbarn/bb-storage/pkg/authenticator",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/atomic",
        "//pkg/clock",
        "//pkg/proto/configuration/grpc",
        "//pkg/proto/configuration/spiffe",
        "//pkg/util",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
        "@com_github_grpc_ecosystem_go_grpc_middleware//:go-grpc-middleware",
        "@com_github_grpc_ecosystem_go_grpc_prometheus//:go-grpc-prometheus",
        "@com_github_spiffe_go_spiffe_v2//svid/x509svid",
        "@io_opentelemetry_go_contrib_instrumentation_google_golang_org_grpc_otelgrpc//:otelgrpc",
        "@io_opentelemetry_go_otel//attribute",
        "@io_opentelemetry_go_otel_trace//:trace",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//credentials",
        "@org_golang_google_grpc//credentials/oauth",
        "@org_golang_google_grpc//health",
        "@org_golang_google_grpc//health/grpc_health_v1",
        "@org_golang_google_grpc//keepalive",
        "@org_golang_google_grpc//metadata",
        "@org_golang_google_grpc//peer",
        "@org_golang_google_grpc//reflection",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//encoding/prototext",
        "@org_golang_google_protobuf//proto",
    ],
)

go_test(
    name = "authenticator_test",
    srcs = [
        "allow_authenticator_test.go",
        "any_authenticator_test.go",
        "deny_authenticator_test.go",
        "tls_client_certificate_authenticator_test.go",
    ],
    deps = [
        ":authenticator",
        "//internal/mock",
        "//pkg/proto/configuration/grpc",
        "//pkg/testutil",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
        "@com_github_golang_mock//gomock",
        "@com_github_stretchr_testify//require",
        "@io_opentelemetry_go_otel//attribute",
        "@io_opentelemetry_go_otel_trace//:trace",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//credentials",
        "@org_golang_google_grpc//metadata",
        "@org_golang_google_grpc//peer",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/known/emptypb",
    ],
)
