load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "grpcauth",
    srcs = [
        "all_authenticator.go",
        "allow_authenticator.go",
        "any_authenticator.go",
        "authenticator.go",
        "deny_authenticator.go",
        "jwt_authenticator.go",
        "peer_credentials_authenticator.go",
        "peer_transport_credentials.go",
        "peer_transport_credentials_bsd.go",
        "peer_transport_credentials_disabled.go",
        "peer_transport_credentials_linux.go",
        "spiffe_authenticator.go",
        "tls_client_certificate_authenticator.go",
    ],
    importpath = "github.com/buildbarn/bb-storage/pkg/grpcauth",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/auth",
        "//pkg/clock",
        "//pkg/jwt",
        "//pkg/program",
        "//pkg/util",
        "@com_github_jmespath_go_jmespath//:go-jmespath",
        "@com_github_spiffe_go_spiffe_v2//svid/x509svid",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//credentials",
        "@org_golang_google_grpc//metadata",
        "@org_golang_google_grpc//peer",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//proto",
    ] + select({
        "@rules_go//go/platform:android": [
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:darwin": [
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:freebsd": [
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:ios": [
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:linux": [
            "@org_golang_x_sys//unix",
        ],
        "//conditions:default": [],
    }),
)

go_test(
    name = "grpcauth_test",
    srcs = [
        "all_authenticator_test.go",
        "allow_authenticator_test.go",
        "any_authenticator_test.go",
        "deny_authenticator_test.go",
        "peer_credentials_authenticator_test.go",
        "tls_client_certificate_authenticator_test.go",
    ] + select({
        "@rules_go//go/platform:android": [
            "peer_transport_credentials_test.go",
        ],
        "@rules_go//go/platform:darwin": [
            "peer_transport_credentials_test.go",
        ],
        "@rules_go//go/platform:freebsd": [
            "peer_transport_credentials_test.go",
        ],
        "@rules_go//go/platform:ios": [
            "peer_transport_credentials_test.go",
        ],
        "@rules_go//go/platform:linux": [
            "peer_transport_credentials_test.go",
        ],
        "//conditions:default": [],
    }),
    deps = [
        ":grpcauth",
        "//internal/mock",
        "//pkg/auth",
        "//pkg/testutil",
        "@com_github_jmespath_go_jmespath//:go-jmespath",
        "@com_github_stretchr_testify//require",
        "@io_opentelemetry_go_otel//attribute",
        "@io_opentelemetry_go_proto_otlp//common/v1:common",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//credentials",
        "@org_golang_google_grpc//peer",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//types/known/structpb",
        "@org_uber_go_mock//gomock",
    ],
)
