load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "testutil",
    srcs = [
        "fake_certs.go",
        "testutil.go",
    ],
    importpath = "github.com/buildbarn/bb-storage/pkg/testutil",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/clock",
        "@com_github_spiffe_go_spiffe_v2//spiffeid",
        "@com_github_stretchr_testify//require",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//encoding/protojson",
        "@org_golang_google_protobuf//proto",
        "@org_uber_go_mock//gomock",
    ],
)
