load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "util",
    srcs = [
        "buckets.go",
        "error_logger.go",
        "jsonnet.go",
        "non_empty_stack.go",
        "pem.go",
        "proto.go",
        "semaphore.go",
        "status.go",
        "uuid.go",
    ],
    importpath = "github.com/buildbarn/bb-storage/pkg/util",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_google_uuid//:uuid",
        "@jsonnet_go//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//encoding/protojson",
        "@org_golang_google_protobuf//encoding/protowire",
        "@org_golang_google_protobuf//proto",
        "@org_golang_x_sync//semaphore",
    ],
)

go_test(
    name = "util_test",
    srcs = [
        "buckets_test.go",
        "proto_test.go",
    ],
    deps = [
        ":util",
        "//internal/mock",
        "//pkg/testutil",
        "@com_github_stretchr_testify//require",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//encoding/protowire",
        "@org_uber_go_mock//gomock",
    ],
)
