load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "iscc_proto",
    srcs = ["iscc.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_remote_apis//build/bazel/remote/execution/v2:remote_execution_proto",
        "@protobuf//:duration_proto",
        "@protobuf//:empty_proto",
        "@protobuf//:timestamp_proto",
    ],
)

go_proto_library(
    name = "iscc_go_proto",
    compilers = [
        "@rules_go//proto:go_proto",
        "@rules_go//proto:go_grpc_v2",
    ],
    importpath = "github.com/buildbarn/bb-storage/pkg/proto/iscc",
    proto = ":iscc_proto",
    visibility = ["//visibility:public"],
    deps = ["@bazel_remote_apis//build/bazel/remote/execution/v2:remote_execution_go_proto"],
)

go_library(
    name = "iscc",
    srcs = [
        "iscc.pb.go",
        "iscc_grpc.pb.go",
    ],
    importpath = "github.com/buildbarn/bb-storage/pkg/proto/iscc",
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_remote_apis//build/bazel/remote/execution/v2:remote_execution_go_proto",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
        "@org_golang_google_protobuf//types/known/durationpb",
        "@org_golang_google_protobuf//types/known/emptypb",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)
