load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "replicator_proto",
    srcs = ["replicator.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_remote_apis//build/bazel/remote/execution/v2:remote_execution_proto",
        "@protobuf//:empty_proto",
    ],
)

go_proto_library(
    name = "replicator_go_proto",
    compilers = [
        "@rules_go//proto:go_proto",
        "@rules_go//proto:go_grpc_v2",
    ],
    importpath = "github.com/buildbarn/bb-storage/pkg/proto/replicator",
    proto = ":replicator_proto",
    visibility = ["//visibility:public"],
    deps = ["@bazel_remote_apis//build/bazel/remote/execution/v2:remote_execution_go_proto"],
)

go_library(
    name = "replicator",
    srcs = [
        "replicator.pb.go",
        "replicator_grpc.pb.go",
    ],
    importpath = "github.com/buildbarn/bb-storage/pkg/proto/replicator",
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_remote_apis//build/bazel/remote/execution/v2:remote_execution_go_proto",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
        "@org_golang_google_protobuf//types/known/emptypb",
    ],
)
