load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "auth_proto",
    srcs = ["auth.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/proto/configuration/spiffe:spiffe_proto",
        "@protobuf//:empty_proto",
    ],
)

go_proto_library(
    name = "auth_go_proto",
    importpath = "github.com/buildbarn/bb-storage/pkg/proto/configuration/auth",
    proto = ":auth_proto",
    visibility = ["//visibility:public"],
    deps = ["//pkg/proto/configuration/spiffe"],
)

go_library(
    name = "auth",
    srcs = ["auth.pb.go"],
    importpath = "github.com/buildbarn/bb-storage/pkg/proto/configuration/auth",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
        "@org_golang_google_protobuf//types/known/emptypb",
    ],
)
