load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "bb_replicator_proto",
    srcs = ["bb_replicator.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/proto/configuration/blobstore:blobstore_proto",
        "//pkg/proto/configuration/global:global_proto",
        "//pkg/proto/configuration/grpc:grpc_proto",
    ],
)

go_proto_library(
    name = "bb_replicator_go_proto",
    importpath = "github.com/buildbarn/bb-storage/pkg/proto/configuration/bb_replicator",
    proto = ":bb_replicator_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/proto/configuration/blobstore",
        "//pkg/proto/configuration/global",
        "//pkg/proto/configuration/grpc",
    ],
)

go_library(
    name = "bb_replicator",
    srcs = ["bb_replicator.pb.go"],
    importpath = "github.com/buildbarn/bb-storage/pkg/proto/configuration/bb_replicator",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
    ],
)
