load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "builder_proto",
    srcs = ["builder.proto"],
    visibility = ["//visibility:public"],
    deps = ["//pkg/proto/configuration/grpc:grpc_proto"],
)

go_proto_library(
    name = "builder_go_proto",
    importpath = "github.com/buildbarn/bb-storage/pkg/proto/configuration/builder",
    proto = ":builder_proto",
    visibility = ["//visibility:public"],
    deps = ["//pkg/proto/configuration/grpc"],
)

go_library(
    name = "builder",
    srcs = ["builder.pb.go"],
    importpath = "github.com/buildbarn/bb-storage/pkg/proto/configuration/builder",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
    ],
)
