load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "digest_proto",
    srcs = ["digest.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/proto/configuration/eviction:eviction_proto",
        "@protobuf//:duration_proto",
    ],
)

go_proto_library(
    name = "digest_go_proto",
    importpath = "github.com/buildbarn/bb-storage/pkg/proto/configuration/digest",
    proto = ":digest_proto",
    visibility = ["//visibility:public"],
    deps = ["//pkg/proto/configuration/eviction"],
)

go_library(
    name = "digest",
    srcs = ["digest.pb.go"],
    importpath = "github.com/buildbarn/bb-storage/pkg/proto/configuration/digest",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
        "@org_golang_google_protobuf//types/known/durationpb",
    ],
)
