load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "spiffe_proto",
    srcs = ["spiffe.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "spiffe_go_proto",
    importpath = "github.com/buildbarn/bb-storage/pkg/proto/configuration/spiffe",
    proto = ":spiffe_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "spiffe",
    srcs = ["spiffe.pb.go"],
    importpath = "github.com/buildbarn/bb-storage/pkg/proto/configuration/spiffe",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
    ],
)
