load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "gcp_proto",
    srcs = ["gcp.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "gcp_go_proto",
    importpath = "github.com/buildbarn/bb-storage/pkg/proto/configuration/cloud/gcp",
    proto = ":gcp_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "gcp",
    srcs = ["gcp.pb.go"],
    importpath = "github.com/buildbarn/bb-storage/pkg/proto/configuration/cloud/gcp",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
    ],
)
